@@ -510,13 +510,11 @@ MapiMsg mapi_disconnect(Mapi mid);
 MapiMsg mapi_error(Mapi mid);
 char *mapi_error_str(Mapi mid);
 MapiMsg mapi_execute(MapiHdl hdl);
-MapiMsg mapi_execute_array(MapiHdl hdl, char **val);
 MapiMsg mapi_explain(Mapi mid, FILE *fd);
 MapiMsg mapi_explain_query(MapiHdl hdl, FILE *fd);
 MapiMsg mapi_explain_result(MapiHdl hdl, FILE *fd);
 mapi_int64 mapi_fetch_all_rows(MapiHdl hdl);
 char *mapi_fetch_field(MapiHdl hdl, int fnr);
-char **mapi_fetch_field_array(MapiHdl hdl);
 size_t mapi_fetch_field_len(MapiHdl hdl, int fnr);
 char *mapi_fetch_line(MapiHdl hdl);
 MapiMsg mapi_fetch_reset(MapiHdl hdl);
@@ -562,17 +560,12 @@ MapiMsg mapi_param_string(MapiHdl hdl, int fnr, int sqltype, char *ptr, int *siz
 MapiMsg mapi_param_type(MapiHdl hdl, int fnr, int ctype, int sqltype, void *ptr);
 MapiMsg mapi_ping(Mapi mid);
 MapiHdl mapi_prepare(Mapi mid, const char *cmd);
-MapiHdl mapi_prepare_array(Mapi mid, const char *cmd, char **val);
 MapiMsg mapi_prepare_handle(MapiHdl hdl, const char *cmd);
 MapiHdl mapi_query(Mapi mid, const char *cmd);
-MapiHdl mapi_query_array(Mapi mid, const char *cmd, char **val);
 MapiMsg mapi_query_done(MapiHdl hdl);
 MapiMsg mapi_query_handle(MapiHdl hdl, const char *cmd);
 MapiMsg mapi_query_part(MapiHdl hdl, const char *cmd, size_t size);
 MapiHdl mapi_query_prep(Mapi mid);
-MapiHdl mapi_quick_query(Mapi mid, const char *cmd, FILE *fd);
-MapiHdl mapi_quick_query_array(Mapi mid, const char *cmd, char **val, FILE *fd);
-MapiMsg mapi_quick_response(MapiHdl hdl, FILE *fd);
 char *mapi_quote(const char *msg, int size);
 MapiMsg mapi_read_response(MapiHdl hdl);
 MapiMsg mapi_reconnect(Mapi mid);
