@@ -1,3 +1,0 @@
-#!/bin/sh
-
-Mlog -x "sample2 $HOST $MAPIPORT sql"
