@@ -1,6 +1,0 @@
-@echo off
-
-prompt # $t $g  
-echo on
-
-sample3.exe %HOST% %MAPIPORT% sql
